<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/header"
        app:cardElevation="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="19dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:textAlignment="center"
            android:layout_marginVertical="19dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/record_editor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="19dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_check_24" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/record_title"
                android:layout_marginBottom="32dp"
                android:hint="@string/record_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null" />

            <EditText
                android:id="@+id/record_content"
                android:hint="@string/record_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dueDateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/due_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dueDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status_options"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
